# hparch-platform

./: .gitignore  README.md  cameras.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
astar/: astar.py
calibration/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml
calibration/assets/: config.xml  config_left.xml  config_right.xml  left.xml  right.xml  stereo_calib.xml
calibration/calib/: out_camera_data.xml  settings.yaml
calibration/calib_stereo/: extrinsics.yml  intrinsics.yml
calibration/calib_stereo_left/: out_camera_data.yml
calibration/calib_stereo_right/: out_camera_data.yml
calibration/src/: main.cpp  stereo.cpp
convert_video/: Dockerfile  converting_video.md  create_rgb_txt.py  docker-compose.yml
docs/: calibration.md  camera-info.md  converting_video.md  cross-compilation.md  increasing-swap-space-raspbian.md  install-powershell-pi.md  installing-docker-on-pi.md  live-stream-pi-video.md  opencv-mjpeg-input.md  pi-camera-module-setup.md  running-slam-live-video.md
meeting-notes/: 5-24.md  5-31.md  6-18.md
omnimapper/: docker-compose.yml  tutorial.md
orb-slam2-runtime-deps/: Dockerfile  build-arm.sh  build-cuda-x86.sh  build-jetson.sh  build-x86.sh  build.ps1
raspbian/: Dockerfile
scripts/: prepare.sh
slam/: Dockerfile  dev.cmd  dev.sh  docker-compose.yml  main.cc  slam.sh
slam_build_essentials/: Dockerfile
snapshots/: Dockerfile  docker-compose.yml  main.py
streamer/: Dockerfile  docker-compose.yml
