[tool.poetry]
name = "hparch-platform"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
bandit = "^1.6"
mypy = "^0.701.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
